force-app/zurich-base/main/default/objects/ExternalRequest__c/ExternalRequest__c.object-meta.xml
<CustomObject>
    <description>Request sent by an external system that will be inserted in the processing queue.</description>
    <label>External request</label>
    <nameField>
        <displayFormat>ER{YY}{MM}{DD}{00000}</displayFormat>
        <label>External request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>