force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/ContentFormat__c.field-meta.xml
<CustomField>
    <fullName>ContentFormat__c</fullName>
    <label>Content Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>