force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Indicates the country of the external system</description>
    <inlineHelpText>Indicates the country of the external system</inlineHelpText>
    <label>País</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>