force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Indicates the type of information is being sent to Salesforce</description>
    <inlineHelpText>Indicates the type of information is being sent to Salesforce</inlineHelpText>
    <label>Entidad</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>