force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>