force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Error_Log_Response__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Response__c</fullName>
    <description>This field will store any error in the response to IBA (via middleware). Check AdminSetup metadata to see the Endpoint configurations.</description>
    <label>Error Log Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>