force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Json__c.field-meta.xml
<CustomField>
    <fullName>Json__c</fullName>
    <description>Contains the json message with all data to pass to Salesforce</description>
    <inlineHelpText>Contains the json message with all data to pass to Salesforce</inlineHelpText>
    <label>Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>