force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/NumRetry__c.field-meta.xml
<CustomField>
    <fullName>NumRetry__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of retries. Whenever it is processed it sums 1.</description>
    <inlineHelpText>Number of retries. Whenever it is processed it sums 1.</inlineHelpText>
    <label>Número de reintentos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>