force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Indicates which external system sends data to Salesforce</description>
    <inlineHelpText>Indicates which external system sends data to Salesforce</inlineHelpText>
    <label>Origen</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>