force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the request has been processed</description>
    <inlineHelpText>Indicates if the request has been processed</inlineHelpText>
    <label>Procesado</label>
    <type>Checkbox</type>
</CustomField>