force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/ProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessedDate__c</fullName>
    <description>Date and time when the process has been processed</description>
    <inlineHelpText>Date and time when the process has been processed</inlineHelpText>
    <label>Fecha de procesado</label>
    <type>DateTime</type>
</CustomField>