force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/ProcessResult__c.field-meta.xml
<CustomField>
    <fullName>ProcessResult__c</fullName>
    <description>Result of the request process</description>
    <inlineHelpText>Result of the request process</inlineHelpText>
    <label>Resultado del proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>