force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of retries when sending the processing response to the external system</description>
    <label>Reintentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>