force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/RetryDate__c.field-meta.xml
<CustomField>
    <fullName>RetryDate__c</fullName>
    <description>Date and time when the retry has happened</description>
    <inlineHelpText>Date and time when the retry has happened</inlineHelpText>
    <label>Fecha de ultimo reintento</label>
    <type>DateTime</type>
</CustomField>