force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the processing result has been sent to the external system</description>
    <label>Enviado</label>
    <type>Checkbox</type>
</CustomField>