force-app/zurich-base/main/default/objects/ExternalRequest__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>