force-app/zurich-base/main/default/objects/ExternalRequest__c/recordTypes/GENERIC.recordType-meta.xml
<RecordType>
    <fullName>GENERIC</fullName>
    <active>true</active>
    <description>A generic External Request record type</description>
    <label>GENERIC</label>
</RecordType>