force-app/zurich-base/main/default/objects/ExternalRequest__c/recordTypes/INFO.recordType-meta.xml
<RecordType>
    <fullName>INFO</fullName>
    <active>true</active>
    <label>INFO</label>
</RecordType>