force-app/zurich-base/main/default/objects/ExternalRequest__c/recordTypes/INFOProcessed.recordType-meta.xml
<RecordType>
    <fullName>INFOProcessed</fullName>
    <active>true</active>
    <label>INFOProcessed</label>
</RecordType>