force-app/zurich-base/main/default/objects/ExternalRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <columns>Processed__c</columns>
    <columns>ProcessResult__c</columns>
    <columns>ProcessedDate__c</columns>
    <columns>NumRetry__c</columns>
    <columns>Sent__c</columns>
    <columns>Error_Log__c</columns>
    <columns>Json__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>