force-app/zurich-base/main/default/objects/ExternalRequest__c/listViews/Resultado_KO.listView-meta.xml
<ListView>
    <fullName>Resultado_KO</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <columns>ProcessedDate__c</columns>
    <columns>Processed__c</columns>
    <columns>Sent__c</columns>
    <columns>Retry__c</columns>
    <columns>Error_Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProcessResult__c</field>
        <operation>equals</operation>
        <value>KO</value>
    </filters>
    <label>Resultado KO</label>
</ListView>